Fix powered by you image on mobile

--- a/src/views/homepage/Partners.scss
+++ b/src/views/homepage/Partners.scss
@@ -68,6 +68,13 @@
     margin: 64px 0;
     justify-content: center;
     align-items: center;
+    
+    @media (max-width: 767px) {
+      flex-wrap: nowrap;
+      flex-direction: column;
+      gap: 40px;
+      padding-left: 0;
+    }
 
     & img:first-child,
     & img:last-child {
@@ -75,10 +82,22 @@
       object-fit: contain;
     }
 
-    li.item svg {
-      height: 80px;
-      width: auto;
+    li.item {
+      &:first-of-type {
+        svg{
+          @media (max-width: 414px) {
+            scale: 0.7;
+          }
+        }
+      }
+
+      svg {
+        display: block;
+        height: 80px;
+        width: auto;
+      }
     }
+   
   }
 }
 
